--- a/Exercicio/index.html
+++ b/Exercicio/index.html
@@ -28,13 +28,13 @@
             <h1>Comprar</h1>
             <h4>(pode confiar)</h4>
             <a href="https://sp.olx.com.br/sao-paulo-e-regiao/autos-e-pecas/carros-vans-e-utilitarios/chevette-81-bicudo-sem-motor-1347842709?_gl=1*8q4fco*_gcl_aw*R0NMLjE3MzEzNTAwMDguQ2owS0NRaUE4OGE1QmhEUEFSSXNBRmo1OTVnRW8teHRkYzhOQ01FYXYtdk84bVo1TWdGMjJidTlpYlhicFQ4cl9HekpTbWJJelUzOHdPRWFBbHkwRUFMd193Y0I.*_ga*MTczMjYyNjkzNS4xNzMxMzUwMDA3*_ga_50C013M2CC*MTczMTM1MDAwNi4xLjAuMTczMTM1MDAxNC41Mi4wLjA.&lis=listing_2020" target="_blank">
-                <button type="button">Efetuar compra</button>
+                <marquee><button type="button">Efetuar compra</button></marquee>
             </a>
               
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Site de carros - Todos os direitos reservados</p>
+        <marquee>&copy; 2024 Site de carros - Todos os direitos reservados</marquee>
     </footer>
 </body>
 </html>
